--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="line"></div>
             <div class="line2"></div>
             <div class="center">
-                <div class="nombre animated fadeInLeft"><p>AR</p><p>TU</p><p>RO</p></div>
+                <div class="nombre animated fadeInLeft"><p>TO</p><p>MAS</p></div>
                 <div class="iam animated fadeInLeft">
                 <span class="espanol">Programador</span>
                 <span class="ingles">Developer</span> | UI Styler</div>
