Traduccion al Ingles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>TOMAS AMAYO</title>
     <!--Mi estilo-->
-    <link rel="stylesheet" type="text/css" href="https://pixmy.github.io/style.css">
+    <link rel="stylesheet" type="text/css" href="https://tomasamayo.github.io/css/style.css">
     <!--Font awesome-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
@@ -86,8 +86,8 @@
                     <p class="espanol">Por último quiero mencionar que mi Inglés es Avanzado.</p>
                 </p>
                 <p class="ingles">              
-                    My name is Arturo Cabrera, I'm from the state of Guanajuato and I love to design websites, I like to give that first impression which makes the user to stay within the page, plus <i class = "fa fa-heart"> </i> programming and always arrive at an optimal solution for the customer either individually or in teams.
-                    I am a recent graduate of Instituto Tecnológico del sur de Guanajuato student, but I have had several work experiences.
+                  My name is Tomas Amayo, I am from Pucallpa and I love designing websites, I like to give that first impression that makes the user stay within the page, 
+                  in addition to programming and always arriving at an optimal solution for the client. either individually or in teams. I am a recent student graduate of the Technological Institute of Southern Guanajuato, but I have had several work experiences.
                     <p class="ingles">Finally I want to mention that my English is Advanced.</p>
                 </p>
             </div>
