--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ This project is part of the internal software of the school.
 /*
 **  InkWeb - Inkscape's Javscript features for the open vector web
 **
-**  Copyright (C) 2009 Aurelio A. Heckert, aurium (a) gmail dot com
+**  Copyright (C) 2009 Tomas Amayo (a) gmail dot com
 **
 **  ********* Bugs and New Fetures *************************************
 **   If you found any bug on this script or if you want to propose a
