--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="hire" id="hire"><i class="fa fa-handshake-o animated swing infinite"></i>
         <div class="info display"><div class="correo"><span class="espanol">tomasamayo@gmail.com</span>
             <span class="ingles">tomasamayo@gmail.com</span></div>
-            <div class="tel"><i class="fa"></i></div>
+            <div class="tel"><i class="fa">+51944239178</i></div>
         </div>
         <span class="espanol">Cotratame</span>
         <span class="ingles">Hire me</span>
@@ -78,7 +78,7 @@
                 <span class="squareSubTitle ingles">Hello! get to know me</span>
                 <span class="squareSubTitle espanol">Hola! conoceme</span>
             </div>
-            <div class="squareImage show1 hidden"><img class="image yo" src="https://s20.postimg.cc/hp1mhy2d9/arturo_1.png" style="background-color:white;"></div>
+            <div class="squareImage show1 hidden"><img class="image yo" src="https://i.imgur.com/wOpMzbE.png" style="background-color:white;"></div>
             <div class="squareText sobreMi show1 hidden">
                 <p class="espanol">
                   Me llamo Tomas Amayo, soy de Perú y me encanta diseñar páginas web, me gusta dar esa primera impresión la cual hace que el usuario 
