--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="es" >
 <head>
-  <meta charset="UTF-8">
-  <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-<!-- partial:index.partial.html -->
-
-<head>
-    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width" />
     <title>TOMAS AMAYO</title>
+    <meta name="author" content="CV, digitalizado de Tomas Amayo">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Español">
+    <meta name="keywords" content="tomito, tap, elementor,cv, páginas de vendas, html, scripts plr, plr gtmetrix, páginas de vendas lenta, otimizar wordpress, wp, template plr, scripts plr, scripts delay">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tomasamayo.ithub.io">
+    <meta property="og:title" content="CV, digitalizado de Tomas Amayo">
+    <meta property="og:description" content="CV, digitalizado de Tomas Amayo">
+    <meta property="og:image" content="https://i.imgur.com/u3nQ3aI.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://paysupgo.com/">
+    <meta property="twitter:title" content="PAYPAL SUPREME - Automatiza tu negocio de manera inteligente">
+    <meta property="twitter:description" content="CV, digitalizado de Tomas Amayo">
+    <meta property="twitter:image" content="https://i.imgur.com/u3nQ3aI.jpg">
+    <meta name="keywords" content="tomito, tap, elementor, páginas de vendas, html,cv, scripts plr, plr gtmetrix, páginas de vendas lenta, otimizar wordpress, wp, template plr, scripts plr, scripts delay">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!--Mi estilo-->
     <link rel="stylesheet" type="text/css" href="https://tomasamayo.github.io/css/style.css">
     <!--Font awesome-->
